// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <h3>
        禁用整个选择器
      </h3>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-time-picker"
      >
        <div
          class="t-popup__reference t-time-picker__group t-select-input t-select-input--empty"
        >
          <div
            class="t-input__wrap"
            value=""
          >
            <div
              class="t-input t-is-readonly t-is-disabled t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                disabled=""
                placeholder="选择时间"
                readonly=""
                type="text"
                value=""
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-icon t-icon-time"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                  <path
                    d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <h3>
        禁用指定时间
      </h3>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-time-picker"
      >
        <div
          class="t-popup__reference t-time-picker__group t-select-input t-select-input--empty"
        >
          <div
            class="t-input__wrap"
            value=""
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                placeholder="选择时间"
                readonly=""
                type="text"
                value=""
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-icon t-icon-time"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                  <path
                    d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`hide-clear-button.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <h3>
        禁止清空
      </h3>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-time-picker"
      >
        <div
          class="t-popup__reference t-time-picker__group t-select-input"
        >
          <div
            class="t-input__wrap"
            value="12:00:00"
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                placeholder="请输入"
                readonly=""
                type="text"
                value="12:00:00"
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-icon t-icon-time"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                  <path
                    d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <h3>
        允许清空
      </h3>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-time-picker"
      >
        <div
          class="t-popup__reference t-time-picker__group t-select-input"
        >
          <div
            class="t-input__wrap"
            value="12:00:00"
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                placeholder="请输入"
                readonly=""
                type="text"
                value="12:00:00"
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-icon t-icon-time"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                  <path
                    d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`hm.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <h3>
        时分选择
      </h3>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-time-picker"
      >
        <div
          class="t-popup__reference t-time-picker__group t-select-input"
        >
          <div
            class="t-input__wrap"
            value="12:00"
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                placeholder="请输入"
                readonly=""
                type="text"
                value="12:00"
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-icon t-icon-time"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                  <path
                    d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <h3>
        毫秒选择
      </h3>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-time-picker"
      >
        <div
          class="t-popup__reference t-time-picker__group t-select-input"
        >
          <div
            class="t-input__wrap"
            value="12:59:59:000"
          >
            <div
              class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
            >
              <div
                class="t-input__prefix"
              />
              <input
                class="t-input__inner"
                placeholder="请输入"
                readonly=""
                type="text"
                value="12:59:59:000"
              />
              <span
                class="t-input__suffix t-input__suffix-icon"
              >
                <svg
                  class="t-icon t-icon-time"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                  <path
                    d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
                    fill="currentColor"
                    fill-opacity="0.9"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`hms.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-time-picker"
  >
    <div
      class="t-popup__reference t-time-picker__group t-select-input"
    >
      <div
        class="t-input__wrap"
        value="12:00:00"
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请输入"
            readonly=""
            type="text"
            value="12:00:00"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-time"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyboard.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-time-picker"
  >
    <div
      class="t-popup__reference t-time-picker__group t-select-input"
    >
      <div
        class="t-input__wrap"
        value="12:08:00"
      >
        <div
          class="t-input t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            value="12:08:00"
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-time"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`panel.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-time-picker__panel"
  >
    <div
      class="t-time-picker__panel-section-body"
    >
      <div
        class="t-time-picker__panel-body"
      >
        <div
          class="t-time-picker__panel-body-active-mask"
        >
          <div />
          <div />
          <div />
        </div>
        <ul
          class="t-time-picker__panel-body-scroll"
        >
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            00
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            01
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            02
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            03
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            04
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            05
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            06
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            07
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item t-is-current"
          >
            08
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            09
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            10
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            11
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            12
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            13
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            14
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            15
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            16
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            17
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            18
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            19
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            20
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            21
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            22
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            23
          </li>
        </ul>
        <ul
          class="t-time-picker__panel-body-scroll"
        >
          <li
            class="t-time-picker__panel-body-scroll-item t-is-current"
          >
            00
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            01
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            02
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            03
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            04
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            05
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            06
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            07
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            08
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            09
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            10
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            11
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            12
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            13
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            14
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            15
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            16
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            17
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            18
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            19
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            20
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            21
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            22
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            23
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            24
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            25
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            26
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            27
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            28
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            29
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            30
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            31
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            32
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            33
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            34
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            35
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            36
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            37
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            38
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            39
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            40
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            41
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            42
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            43
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            44
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            45
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            46
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            47
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            48
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            49
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            50
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            51
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            52
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            53
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            54
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            55
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            56
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            57
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            58
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            59
          </li>
        </ul>
        <ul
          class="t-time-picker__panel-body-scroll"
        >
          <li
            class="t-time-picker__panel-body-scroll-item t-is-current"
          >
            00
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            01
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            02
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            03
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            04
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            05
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            06
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            07
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            08
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            09
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            10
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            11
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            12
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            13
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            14
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            15
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            16
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            17
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            18
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            19
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            20
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            21
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            22
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            23
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            24
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            25
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            26
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            27
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            28
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            29
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            30
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            31
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            32
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            33
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            34
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            35
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            36
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            37
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            38
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            39
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            40
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            41
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            42
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            43
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            44
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            45
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            46
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            47
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            48
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            49
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            50
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            51
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            52
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            53
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            54
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            55
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            56
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            57
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            58
          </li>
          <li
            class="t-time-picker__panel-body-scroll-item"
          >
            59
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`range.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-time-picker"
  >
    <div
      class="t-range-input-popup"
    >
      <div
        class="t-popup__reference t-range-input-popup"
      >
        <div
          class="t-range-input t-time-picker__group"
          value=""
        >
          <div
            class="t-range-input__inner"
          >
            <div
              class="t-input__wrap t-range-input__inner-left"
            >
              <div
                class="t-input t-size-m t-align-left t-is-default"
              >
                <input
                  class="t-input__inner"
                  placeholder="开始时间"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="t-range-input__inner-separator"
            >
              -
            </div>
            <div
              class="t-input__wrap t-range-input__inner-right"
            >
              <div
                class="t-input t-size-m t-align-left t-is-default"
              >
                <input
                  class="t-input__inner"
                  placeholder="结束时间"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <span
              class="t-range-input__suffix t-range-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-time"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
                <path
                  d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`show-steps.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-time-picker"
  >
    <div
      class="t-popup__reference t-time-picker__group t-select-input t-select-input--empty"
    >
      <div
        class="t-input__wrap"
        value=""
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="选择时间"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-time"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`twelve-hour-meridian.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-time-picker"
  >
    <div
      class="t-popup__reference t-time-picker__group t-select-input t-select-input--empty"
    >
      <div
        class="t-input__wrap"
      >
        <div
          class="t-input t-is-readonly t-size-m t-align-left t-is-default t-input--prefix t-input--suffix"
        >
          <div
            class="t-input__prefix"
          />
          <input
            class="t-input__inner"
            placeholder="选择时间"
            readonly=""
            type="text"
            value=""
          />
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-time"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
